user service refactoring