@@ -10,27 +10,27 @@ import cz.malickov.backend.exception.userExceptions.UserAlreadyExistsException;
 import cz.malickov.backend.exception.userExceptions.UserNotFoundException;
 import cz.malickov.backend.mapper.UserMapper;
 import cz.malickov.backend.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
+import java.security.SecureRandom;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Service
 public class UserService{
     private final UserRepository userRepository;
-    private final BCryptPasswordEncoder bCryptPasswordEncoder;
+    private final PasswordEncoder passwordEncoder;
     private final UserMapper userMapper;
 
 
     public UserService(UserRepository userRepository,
-                       @Value("${security.bcrypt.strength}") int bCryptStrength,
-                       UserMapper userMapper) {
+                       UserMapper userMapper,
+                       PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
-        this.bCryptPasswordEncoder = new BCryptPasswordEncoder(bCryptStrength);
+        this.passwordEncoder = passwordEncoder;
         this.userMapper = userMapper;
     }
 
@@ -43,23 +43,27 @@ public class UserService{
     public UserOutboundDTO registerUser(UserInboundDTO userInboundDTO) {
 
         String email = userInboundDTO.email();
-        Optional<User> optionalUser = userRepository.findByEmail(email);
-        if (optionalUser.isPresent()) {
-            throw new UserAlreadyExistsException(email);
-        }
-
+        userRepository.findByEmail(email)
+                .ifPresent(user -> {
+                    throw new UserAlreadyExistsException(email);
+                });
 
         User user = userMapper.toEntity(userInboundDTO);
         user.setActive(true);
 
-        // 5 chars hash for identifier
-        String s = userInboundDTO.firstName().concat(user.getEmail()).concat(userInboundDTO.lastName()).concat(new Date().toString());
-        int hash = 0;
-        for (int i = 0; i < s.length(); i++) {
-            hash = 31 * hash + s.charAt(i);
-        }
+
+        // 5 chars hash for identifier used for bank info
+        int hashLength = 5;
+        SecureRandom random = new SecureRandom();
+
+        String hash = random.ints(hashLength, 'a', 'z' + 1)
+                .collect(StringBuilder::new,
+                        StringBuilder::appendCodePoint,
+                        StringBuilder::append)
+                .toString();
+
         user.setIdentifier(userInboundDTO.firstName().concat("_").concat(userInboundDTO.lastName())
-                          .concat("_").concat(Integer.toUnsignedString(hash, 36).substring(0, 5)));
+                          .concat("_").concat(hash));
 
         User savedUser = userRepository.save(user);
 
@@ -85,8 +89,7 @@ public class UserService{
     public List<UserOutboundDTO> getActiveUsers() {
         List<User> users = userRepository.findByActiveTrueOrderByLastNameAsc();
         return users.stream()
-                .map(userMapper::toOutboundDTO)
-                .collect(Collectors.toList());
+                .map(userMapper::toOutboundDTO).toList();
     }
 
     /*
@@ -96,8 +99,7 @@ public class UserService{
     public List<UserOutboundDTO> getInactiveUsers() {
         List<User> users = userRepository.findByActiveFalseOrderByLastNameAsc();
         return users.stream()
-                .map(userMapper::toOutboundDTO)
-                .collect(Collectors.toList());
+                .map(userMapper::toOutboundDTO).toList();
     }
 
     /*
@@ -109,9 +111,9 @@ public class UserService{
         User user = this.userRepository.findByEmail(userLogin.email())
                 .orElseThrow(() -> new UserNotFoundException("User with email "+ userLogin.email() + " does not exists"));
 
-        if( user.getPassword() == null ) {
-            user.setPassword(bCryptPasswordEncoder.encode(userLogin.password()));
-            userRepository.save(user);
+        if( !StringUtils.hasText(user.getPassword()) ) { // false for: null ""  and " "
+            user.setPassword(passwordEncoder.encode(userLogin.password()));
+           // userRepository.save(user);
             return userMapper.toOutboundDTO(user);
         }else{
             throw new GeneralException("Old password has to be deleted first.");
@@ -122,15 +124,9 @@ public class UserService{
     /*
       Used during login to get user based on his email which was extracted from cookies
      */
-    public UserOutboundDTO getUserOutboundDtoByUserEmail(String email){
-
-        Optional<User> optinalUser = this.userRepository.findByEmail(email);
-        if (optinalUser.isPresent()) {
-            User user = optinalUser.get();
-
-            return userMapper.toOutboundDTO(user);
-        }
-        return null;
+    public Optional<UserOutboundDTO> getUserOutboundDtoByUserEmail(String email){
+        return userRepository.findByEmail(email)
+                .map(userMapper::toOutboundDTO);
     }
 
     /*
@@ -138,18 +134,12 @@ public class UserService{
      * @param String: user_uuid
      * @return void
      */
+    @PreAuthorize("hasAnyRole('DIRECTOR','MANAGER')")
     public UserOutboundDTO deletePassword(String uuid) {
-        Optional<User> optinalUser = this.userRepository.findByUserUuid(UUID.fromString(uuid));
-        User user;
-        User savedUser;
-
-        if (optinalUser.isPresent()) {
-            user = optinalUser.get();
-            user.setPassword(null);
-            savedUser = userRepository.save(user);
-        }else{
-            throw new UserNotFoundException("User with uuid "+ uuid + " does not exists");
-        }
-        return userMapper.toOutboundDTO(savedUser);
+        User user =
+                this.userRepository.findByUserUuid(UUID.fromString(uuid))
+                .orElseThrow(()->new UserNotFoundException("User with uuid "+ uuid + " does not exists"));
+        user.setPassword(null);
+        return userMapper.toOutboundDTO(user);
     }
 }
